Création d'un formulaire avec Symfony, affichage du formulaire dans le fichier twig, récupération des données du formulaire grâce à HomeController, injection des données en base de données et redirection vers le dashboard

--- a/templates/pages/dashboard.html.twig
+++ b/templates/pages/dashboard.html.twig
@@ -20,9 +20,9 @@
         <header class="header-dashboard">
             <img class="logo-dashboard" src="logo-garage.png" alt="logo du garage">
             <nav class="nav-dashboard">
-                <a href="/front-end/pages/add_rdv.html">Nouveau RDV</a>
+                <a href="/new_appointment">Nouveau RDV</a>
                 <a href="">Historique RDV</a>
-                <a href="/index.html">Déconnexion</a>
+                <a href="/logout">Déconnexion</a>
             </nav>
         </header>
         <main class="main-dashboard">
