--- a/public/app.css
+++ b/public/app.css
@@ -166,6 +166,7 @@ body {
 }
 
 .rdv-all-cards {
+    position:relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -239,7 +240,92 @@ body {
     font-weight: 700;
     letter-spacing: 5.06px;
     padding:8px;
+    cursor: pointer;
 }
+/* modal in dashboard.twig */
+
+.modal-dashboard {
+    display: none;
+    position:absolute;
+    background-color: #000000;
+    width: 90%;
+    color:white;
+    border: 4px solid white;
+    padding-inline:50px;
+    padding-top:10px;
+    padding-bottom:50px;
+    font-size: 30px;
+}
+
+.main-container_modal {
+    display: flex;
+    flex-direction: row;
+    gap:50px;
+}
+
+.aside-modal {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
+    gap:50px;
+    width: 30%;
+    padding-left: 100px;
+}
+.section-modal {
+    width: 50%;
+}
+
+
+.closebuttonmodal_container {
+    display: flex;
+    justify-content: end;
+}
+
+.orange-bg {
+    background-color: #DC5F00;
+}
+
+.cutted-container {
+    display: flex;
+    flex-direction: row;
+    gap:25px;
+}
+
+.half-div-container {
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+ .label-modal {
+    font-weight: 700;
+ }
+
+ .data-modal {
+    font-weight: 700;
+    color:red;
+    background-color: #D9D9D9;
+    padding:10px;
+ }
+
+ #finish-button {
+    background-color: #F3F9B0;
+ }
+
+ #modify-button {
+    background-color: #9CF89E;
+ }
+
+ #delete-button {
+    background-color: #F9B0B0;
+ }
+ .button-modal {
+    padding-block: 5px;
+    padding-inline: 20px;
+    font-size: 26px;
+    font-weight: 700;
+    width: 80%;
+ }
 
 /* add_rdv.html */
 
