--- a/public/app.css
+++ b/public/app.css
@@ -421,3 +421,71 @@ body {
 .signup-confirmation-message{
     color:white;
 }
+
+/* history.html */
+
+.orange-bg{
+    background-color: #FF6000;
+    font-size: 26px;
+    border: 2px solid white;
+
+}
+
+.table-history {
+    width: 100%;
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.button-table {
+    background-color: #9CF89E;
+    font-size: 16px;
+    font-weight: 700;
+    border: 1px solid black;
+    padding: 5px;
+}
+
+.lign-table {
+    background-color: #FFA559;
+    
+}
+
+.lign-table td{
+    padding: 10px;
+    border: 2px solid white;
+}
+
+.button-column {
+    background-color: #CF0A0A;
+    border: none !important;
+}
+
+.button-table {
+    cursor: pointer;
+}
+
+.modal-history {
+    display: none;
+    position:absolute;
+    background-color: #000000;
+    width: 90%;
+    color:white;
+    border: 4px solid white;
+    padding-inline:50px;
+    padding-top:10px;
+    padding-bottom:50px;
+    font-size: 30px;
+}
+
+.history-filter_container {
+    position: relative;
+    border-radius: 22px;
+    border: 4px solid #FFF;
+    background: #454545;
+    padding:10px;
+    color:white;
+    font-family: 'Noto Sans';
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
