--- a/public/app.css
+++ b/public/app.css
@@ -145,7 +145,7 @@ body {
     text-decoration: none;
     font-weight: 700;
     font-size: 22px;
-    
+    cursor: pointer;
 }
 
 .main-dashboard {
